@@ -1,3 +1,8 @@
+r149 - october, 3, 2009
+    * activite : templates > indexSuccess.php > delete link is displayed, 
+      warning message is up date
+    
+
 r148 - october, 3, 2009
     * membre : templates > showSuccess.php > email is crypted thanks to mail
       helper
